--- a/angular.json
+++ b/angular.json
@@ -30,9 +30,11 @@
               "src/assets"
             ],
             "styles": [
+                "node_modules/bootstrap/dist/css/bootstrap.css",
+  "node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [  "node_modules/bootstrap/dist/js/bootstrap.js","node_modules/bootstrap/dist/js/bootstrap.js"]
           },
           "configurations": {
             "production": {
